--- a/package.json
+++ b/package.json
@@ -6,19 +6,29 @@
     "build": "vite build",
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "format": "prettier --write ./src/**/*.{js,svelte,html,ts}",
+    "lint": "eslint './src/**/*.{js,ts,svelte}'",
+    "lint:fix": "eslint --fix './src/**/*.{js,ts,svelte}'",
+    "prelint": "npm run format"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
     "@testing-library/svelte": "^3.0.3",
     "@types/jest": "^26.0.21",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
     "autoprefixer": "^10.2.5",
     "babel-jest": "^26.6.3",
     "cross-env": "^7.0.3",
     "cssnano": "^5.1.12",
+    "eslint": "^8.33.0",
+    "eslint-plugin-svelte3": "^4.0.0",
     "jest": "^26.6.3",
     "postcss": "^8.4.6",
     "postcss-load-config": "^4.0.1",
+    "prettier": "^2.8.3",
+    "prettier-plugin-svelte": "^2.9.0",
     "svelte": "^3.35.0",
     "svelte-jester": "^1.3.1",
     "svelte-preprocess": "^4.10.7",
